parser/zgg_parser.go
// Code generated from parser/ZggParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // ZggParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ZggParser struct {
	ZggBaseParser
}

var ZggParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func zggparserParserInit() {
	staticData := &ZggParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'true'", "'false'", "'for'", "'in'", "'if'", "'while'", "'do'",
		"'break'", "'continue'", "'func'", "'when'", "'else'", "'nil'", "'undefined'",
		"", "'return'", "'export'", "'class'", "'defer'", "'blockDefer'", "'throw'",
		"'try'", "'catch'", "'finally'", "'static'", "'assert'", "'extend'",
		"'use@'", "'use'", "'switch'", "'case'", "'fallthrough'", "'default'",
		"'is'", "", "", "", "", "'0'", "", "", "", "", "", "", "", "", "", "'...'",
		"'->'", "'=>'", "'**'", "'++'", "'--'", "'=='", "'!='", "'>='", "'<='",
		"':='", "'+='", "'-='", "'*='", "'/='", "'%='", "'&&'", "'||'", "'?.'",
		"'??'", "'&'", "'|'", "'~'", "'<<'", "'>>'", "'^'", "'&='", "'|='",
		"'<<='", "'>>='", "'^='", "'..<'", "'..'", "'.'", "','", "';'", "':'",
		"'('", "')'", "'{'", "'}'", "'['", "']'", "'!'", "'?'", "'>'", "'<'",
		"'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'@'", "'@@'", "'''", "",
		"", "'${'",
	}
	staticData.SymbolicNames = []string{
		"", "TRUE", "FALSE", "FOR", "IN", "IF", "WHILE", "DO", "BREAK", "CONTINUE",
		"FUNC", "WHEN", "ELSE", "NIL", "UNDEFINED", "RETURN_NONE", "RETURN",
		"EXPORT", "CLASS", "DEFER", "BLOCK_DEFER", "THROW", "TRY", "CATCH",
		"FINALLY", "STATIC", "ASSERT", "EXTEND", "USE_AT", "USE", "SWITCH",
		"CASE", "FALLTHROUGH", "DEFAULT", "IS", "WS", "LINECOMMENT", "LINECOMMENT2",
		"BLOCKCOMMENT", "INT_ZERO", "INT_DEC", "INT_HEX", "INT_OCT", "INT_BIN",
		"BIGNUM", "FLOAT", "ENUM", "STRING", "RSTRING", "MORE_ARGS", "LEAD_TO",
		"ARROW", "POW", "PLUS_PLUS", "MINUS_MINUS", "EQUAL", "NOT_EQUAL", "GTEQ",
		"LTEQ", "LOCAL_ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "TIMES_ASSIGN",
		"DIV_ASSIGN", "MOD_ASSIGN", "LOGIC_AND", "LOGIC_OR", "OPTIONAL_CALL",
		"OPTIONAL_ELSE", "BIT_AND", "BIT_OR", "BIT_NOT", "BIT_SHL", "BIT_SHR",
		"BIT_XOR", "BIT_AND_ASSIGN", "BIT_OR_ASSIGN", "BIT_SHL_ASSIGN", "BIT_SHR_ASSIGN",
		"BIT_XOR_ASSIGN", "RANGE_WITHOUT_END", "RANGE_WITH_END", "DOT", "COMMA",
		"SEMICOLON", "COLON", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET",
		"R_BRACKET", "LOGIC_NOT", "QUESTION", "GT", "LT", "ASSIGN", "PLUS",
		"MINUS", "TIMES", "DIV", "MOD", "SINGLE_AT", "DOUBLE_AT", "QUOTE", "IDENTIFIER",
		"TS_RAW", "TS_EXPR_START", "TS_IDENTIFIER", "StrExpr_WS",
	}
	staticData.RuleNames = []string{
		"replItem", "module", "block", "codeBlock", "stmt", "ifCondition", "memberDef",
		"callStmt", "switchCase", "switchDefault", "comparator", "expr", "whenCondition",
		"arguments", "funcArgument", "assignExpr", "preIncDec", "postIncDec",
		"lval", "integer", "literal", "arrayItem", "objItem", "keyValue", "stringLiteral",
		"templateString", "tsItem",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ZggParserInit initializes any static state used to implement ZggParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewZggParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ZggParserInit() {
	staticData := &ZggParserParserStaticData
	staticData.once.Do(zggparserParserInit)
}

// NewZggParser produces a new parser instance for the optional input antlr.TokenStream.
func NewZggParser(input antlr.TokenStream) *ZggParser {
	ZggParserInit()
	this := new(ZggParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ZggParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ZggParser.g4"

	return this
}

// ZggParser tokens.
const (
	ZggParserEOF               = antlr.TokenEOF
	ZggParserTRUE              = 1
	ZggParserFALSE             = 2
	ZggParserFOR               = 3
	ZggParserIN                = 4
	ZggParserIF                = 5
	ZggParserWHILE             = 6
	ZggParserDO                = 7
	ZggParserBREAK             = 8
	ZggParserCONTINUE          = 9
	ZggParserFUNC              = 10
	ZggParserWHEN              = 11
	ZggParserELSE              = 12
	ZggParserNIL               = 13
	ZggParserUNDEFINED         = 14
	ZggParserRETURN_NONE       = 15
	ZggParserRETURN            = 16
	ZggParserEXPORT            = 17
	ZggParserCLASS             = 18
	ZggParserDEFER             = 19
	ZggParserBLOCK_DEFER       = 20
	ZggParserTHROW             = 21
	ZggParserTRY               = 22
	ZggParserCATCH             = 23
	ZggParserFINALLY           = 24
	ZggParserSTATIC            = 25
	ZggParserASSERT            = 26
	ZggParserEXTEND            = 27
	ZggParserUSE_AT            = 28
	ZggParserUSE               = 29
	ZggParserSWITCH            = 30
	ZggParserCASE              = 31
	ZggParserFALLTHROUGH       = 32
	ZggParserDEFAULT           = 33
	ZggParserIS                = 34
	ZggParserWS                = 35
	ZggParserLINECOMMENT       = 36
	ZggParserLINECOMMENT2      = 37
	ZggParserBLOCKCOMMENT      = 38
	ZggParserINT_ZERO          = 39
	ZggParserINT_DEC           = 40
	ZggParserINT_HEX           = 41
	ZggParserINT_OCT           = 42
	ZggParserINT_BIN           = 43
	ZggParserBIGNUM            = 44
	ZggParserFLOAT             = 45
	ZggParserENUM              = 46
	ZggParserSTRING            = 47
	ZggParserRSTRING           = 48
	ZggParserMORE_ARGS         = 49
	ZggParserLEAD_TO           = 50
	ZggParserARROW             = 51
	ZggParserPOW               = 52
	ZggParserPLUS_PLUS         = 53
	ZggParserMINUS_MINUS       = 54
	ZggParserEQUAL             = 55
	ZggParserNOT_EQUAL         = 56
	ZggParserGTEQ              = 57
	ZggParserLTEQ              = 58
	ZggParserLOCAL_ASSIGN      = 59
	ZggParserPLUS_ASSIGN       = 60
	ZggParserMINUS_ASSIGN      = 61
	ZggParserTIMES_ASSIGN      = 62
	ZggParserDIV_ASSIGN        = 63
	ZggParserMOD_ASSIGN        = 64
	ZggParserLOGIC_AND         = 65
	ZggParserLOGIC_OR          = 66
	ZggParserOPTIONAL_CALL     = 67
	ZggParserOPTIONAL_ELSE     = 68
	ZggParserBIT_AND           = 69
	ZggParserBIT_OR            = 70
	ZggParserBIT_NOT           = 71
	ZggParserBIT_SHL           = 72
	ZggParserBIT_SHR           = 73
	ZggParserBIT_XOR           = 74
	ZggParserBIT_AND_ASSIGN    = 75
	ZggParserBIT_OR_ASSIGN     = 76
	ZggParserBIT_SHL_ASSIGN    = 77
	ZggParserBIT_SHR_ASSIGN    = 78
	ZggParserBIT_XOR_ASSIGN    = 79
	ZggParserRANGE_WITHOUT_END = 80
	ZggParserRANGE_WITH_END    = 81
	ZggParserDOT               = 82
	ZggParserCOMMA             = 83
	ZggParserSEMICOLON         = 84
	ZggParserCOLON             = 85
	ZggParserL_PAREN           = 86
	ZggParserR_PAREN           = 87
	ZggParserL_CURLY           = 88
	ZggParserR_CURLY           = 89
	ZggParserL_BRACKET         = 90
	ZggParserR_BRACKET         = 91
	ZggParserLOGIC_NOT         = 92
	ZggParserQUESTION          = 93
	ZggParserGT                = 94
	ZggParserLT                = 95
	ZggParserASSIGN            = 96
	ZggParserPLUS              = 97
	ZggParserMINUS             = 98
	ZggParserTIMES             = 99
	ZggParserDIV               = 100
	ZggParserMOD               = 101
	ZggParserSINGLE_AT         = 102
	ZggParserDOUBLE_AT         = 103
	ZggParserQUOTE             = 104
	ZggParserIDENTIFIER        = 105
	ZggParserTS_RAW            = 106
	ZggParserTS_EXPR_START     = 107
	ZggParserTS_IDENTIFIER     = 108
	ZggParserStrExpr_WS        = 109
)

// ZggParser rules.
const (
	ZggParserRULE_replItem       = 0
	ZggParserRULE_module         = 1
	ZggParserRULE_block          = 2
	ZggParserRULE_codeBlock      = 3
	ZggParserRULE_stmt           = 4
	ZggParserRULE_ifCondition    = 5
	ZggParserRULE_memberDef      = 6
	ZggParserRULE_callStmt       = 7
	ZggParserRULE_switchCase     = 8
	ZggParserRULE_switchDefault  = 9
	ZggParserRULE_comparator     = 10
	ZggParserRULE_expr           = 11
	ZggParserRULE_whenCondition  = 12
	ZggParserRULE_arguments      = 13
	ZggParserRULE_funcArgument   = 14
	ZggParserRULE_assignExpr     = 15
	ZggParserRULE_preIncDec      = 16
	ZggParserRULE_postIncDec     = 17
	ZggParserRULE_lval           = 18
	ZggParserRULE_integer        = 19
	ZggParserRULE_literal        = 20
	ZggParserRULE_arrayItem      = 21
	ZggParserRULE_objItem        = 22
	ZggParserRULE_keyValue       = 23
	ZggParserRULE_stringLiteral  = 24
	ZggParserRULE_templateString = 25
	ZggParserRULE_tsItem         = 26
)

// IReplItemContext is an interface to support dynamic dispatch.
type IReplItemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsReplItemContext differentiates from other interfaces.
	IsReplItemContext()
}

type ReplItemContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyReplItemContext() *ReplItemContext {
	var p = new(ReplItemContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZggParserRULE_replItem
	return p
}

func InitEmptyReplItemContext(p *ReplItemContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZggParserRULE_replItem
}

func (*ReplItemContext) IsReplItemContext() {}

func NewReplItemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ReplItemContext {
	var p = new(ReplItemContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ZggParserRULE_replItem

	return p
}

func (s *ReplItemContext) GetParser() antlr.Parser { return s.parser }

func (s *ReplItemContext) CopyAll(ctx *ReplItemContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *ReplItemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ReplItemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ReplBlockContext struct {
	ReplItemContext
}

func NewReplBlockContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ReplBlockContext {
	var p = new(ReplBlockContext)

	InitEmptyReplItemContext(&p.ReplItemContext)
	p.parser = parser
	p.CopyAll(ctx.(*ReplItemContext))

	return p
}

func (s *ReplBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ReplBlockContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ReplBlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ZggParserVisitor:
		return t.VisitReplBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

type ReplExprContext struct {
	ReplItemContext
}

func NewReplExprContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ReplExprContext {
	var p = new(ReplExprContext)

	InitEmptyReplItemContext(&p.ReplItemContext)
	p.parser = parser
	p.CopyAll(ctx.(*ReplItemContext))

	return p
}

func (s *ReplExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ReplExprContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ReplExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ZggParserVisitor:
		return t.VisitReplExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ZggParser) ReplItem() (localctx IReplItemContext) {
	localctx = NewReplItemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ZggParserRULE_replItem)
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		localctx = NewReplExprContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(54)
			p.expr(0)
		}

	case 2:
		localctx = NewReplBlockContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(55)
			p.Block()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IModuleContext is an interface to support dynamic dispatch.
type IModuleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Block() IBlockContext

	// IsModuleContext differentiates from other interfaces.
	IsModuleContext()
}

type ModuleContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModuleContext() *ModuleContext {
	var p = new(ModuleContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZggParserRULE_module
	return p
}

func InitEmptyModuleContext(p *ModuleContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZggParserRULE_module
}

func (*ModuleContext) IsModuleContext() {}

func NewModuleContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModuleContext {
	var p = new(ModuleContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ZggParserRULE_module

	return p
}

func (s *ModuleContext) GetParser() antlr.Parser { return s.parser }

func (s *ModuleContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ModuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModuleContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ModuleContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ZggParserVisitor:
		return t.VisitModule(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ZggParser) Module() (localctx IModuleContext) {
	localctx = NewModuleContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ZggParserRULE_module)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.Block()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllStmt() []IStmtContext
	Stmt(i int) IStmtContext
	AllSEMICOLON() []antlr.TerminalNode
	SEMICOLON(i int) antlr.TerminalNode

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZggParserRULE_block
	return p
}

func InitEmptyBlockContext(p *BlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZggParserRULE_block
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ZggParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) AllStmt() []IStmtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStmtContext); ok {
			len++
		}
	}

	tst := make([]IStmtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStmtContext); ok {
			tst[i] = t.(IStmtContext)
			i++
		}
	}

	return tst
}

func (s *BlockContext) Stmt(i int) IStmtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStmtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *BlockContext) AllSEMICOLON() []antlr.TerminalNode {
	return s.GetTokens(ZggParserSEMICOLON)
}

func (s *BlockContext) SEMICOLON(i int) antlr.TerminalNode {
	return s.GetToken(ZggParserSEMICOLON, i)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ZggParserVisitor:
		return t.VisitBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ZggParser) Block() (localctx IBlockContext) {
	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ZggParserRULE_block)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&28146950001913838) != 0) || ((int64((_la-71)) & ^0x3f) == 0 && ((int64(1)<<(_la-71))&32349259777) != 0) {
		{
			p.SetState(60)
			p.Stmt()
		}
		p.SetState(62)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == ZggParserSEMICOLON {
			{
				p.SetState(61)
				p.Match(ZggParserSEMICOLON)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICodeBlockContext is an interface to support dynamic dispatch.
type ICodeBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
